--- a/dotfiles/kitty.conf
+++ b/dotfiles/kitty.conf
@@ -1,5 +1,8 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
+# WTF
+shell_integration disable
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
