Use my idea of monospace, not someone else's.

--- a/dotfiles/alacritty.yml
+++ b/dotfiles/alacritty.yml
@@ -178,6 +178,9 @@ font:
   # it is recommended to set `use_thin_strokes` to `false`.
   #use_thin_strokes: true
 
+  normal:
+    family: DejaVu Sans Mono
+
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
