--- a/dotfiles/.mbsyncrc
+++ b/dotfiles/.mbsyncrc
@@ -1,7 +1,7 @@
 IMAPAccount fastmail
 Host imap.fastmail.com
 User alexhsamuel@fastmail.com
-# PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.emacs.d/.mbsyncpass.gpg"
+PassCmd "cat ~/sec/mbsync"
 Port 993
 SSLType IMAPS
 AuthMechs Login
