--- a/dotfiles/.config/sway/config
+++ b/dotfiles/.config/sway/config
@@ -2,6 +2,8 @@
 
 output * scale 1
 
+# NOTE: `swaybg` must be installed for `output bg` to work.
+
 # Output layout - NYC
 # output 'BenQ Corporation BenQ PD3200U GBK00170019' pos 0 0
 # output 'Samsung Electric Company U28D590 0x00000000' pos 3840 0
@@ -150,29 +152,26 @@ bindsym $mod+r mode "resize"
 
 font pango:DejaVu Sans Mono Bold 11
 
-default_border normal 0
-hide_edge_borders smart
+# default_border normal 0
 
-# i3-gap stuff
-for_window [class=".*"] border pixel 5
-gaps outer 0
-gaps inner 5
-smart_gaps on
-smart_borders on
+# gap stuff
+default_border pixel 4
+smart_borders off
+# hide_edge_borders --i3 both
+gaps inner 0
+gaps outer -0
+# smart_gaps on
+
+set $act #666666
+set $inact #333333
 
 # class                 border  backgr. text    indicator child_border
-client.focused          #204080 #204040 #ffffff #2e9ef4   #606060
-client.focused_inactive #102020 #102020 #ffffff #484e50   #202020
-client.unfocused        #222222 #222222 #888888 #292d2e   #000000
+client.focused          $act    $act    #ffffff #2e9ef4   $act
+client.focused_inactive $inact  $inact  #888888 #484e50   #000000
+client.unfocused        $inact  $inact  #888888 #292d2e   #000000
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-# client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
-# client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-# client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-# client.urgent           #2f343a #900000 #ffffff #900000   #900000
-# client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-
-client.background       #ffffff
+client.background       #000000
 
 bindsym $mod+Shift+y exec /home/alex/dev/home/dotfiles/dpms-off
 
@@ -199,7 +198,7 @@ bar {
 # Plasma compatibility improvements
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
-for_window [class="Emacs"] border none
+# for_window [class="Emacs"] border none
 for_window [class="yakuake"] floating enable
 for_window [class="systemsettings"] floating enable
 for_window [class="plasmashell"] floating enable;
