--- a/dotfiles/.config/sway/config
+++ b/dotfiles/.config/sway/config
@@ -119,6 +119,13 @@ bindsym $mod+Shift+c reload
 # Exit sway (logs you out of your Wayland session).
 bindsym $mod+Shift+e exec "swaynag -t warning -m 'Exit sway?' -b 'Exit' 'swaymsg exit'"
 
+# mod+Pause activates a passthrough mode that passes through all keys, until
+# pressed again.
+mode passthrough {
+	bindsym $mod+Pause mode default
+}
+bindsym $mod+Pause mode passthrough
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
